--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.2.60'
     ext.lifecycle_version = '1.1.1'
+    ext.support_library_version = '28.0.0-rc01'
+
 
     repositories {
         google()
