Add koin library (dependency manager)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    //Koin
+    implementation 'org.koin:koin-android:1.0.0-beta-7'
+    implementation 'org.koin:koin-android-scope:1.0.0-beta-7'
+    implementation 'org.koin:koin-android-viewmodel:1.0.0-beta-7'
+
     //Support Library
     implementation "com.android.support:appcompat-v7:$support_library_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
