Add paging library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     //Lifecycle
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+    implementation "android.arch.paging:runtime:$paging_version"
 
     //Network
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
