--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion sdk_version
     defaultConfig {
         applicationId "ir.opensourceapps.android"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion sdk_version
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
