--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     ext.kotlin_version = '1.2.60'
     ext.lifecycle_version = '1.1.1'
-    ext.support_library_version = '28.0.0-rc01'
+    ext.support_library_version = '27.1.1'
     ext.paging_version = '1.0.1'
+    ext.sdk_version = 27
 
     repositories {
         google()
