--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.android.support:design:$support_library_version"
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha2'
+    implementation "com.android.support:cardview-v7:$support_library_version"
 
     //Lifecycle
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
